--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Entities\CDRBillingBatch.cs" />
     <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="GenerateTrafficStatistics.cs" />
     <Compile Include="ImportCDRs.cs" />
     <Compile Include="ProcessBillingCDR.cs" />
     <Compile Include="InitializeObjects.cs" />
@@ -85,6 +86,7 @@
     </Compile>
     <Compile Include="ProcessRawCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdateTrafficStatisticsInDB.cs" />
     <Compile Include="StoreCDRsToDB.cs" />
     <Compile Include="StoreInvalidCDRsToDB.cs" />
     <Compile Include="StoreMainCDRsToDB.cs" />
