--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ApplyZoneInfosToDB.cs" />
     <Compile Include="BuildCodeMatchByCodeGroup.cs" />
     <Compile Include="BuildCodeMatchByFirstCodeDigit.cs" />
+    <Compile Include="BuildRoutes.cs" />
     <Compile Include="CreateRoutingDatabase.cs" />
     <Compile Include="CreateIndexesOnZoneMatchTable.cs" />
     <Compile Include="CreateIndexesOnCodeMatchTable.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="GetSupplierZoneRates.cs" />
     <Compile Include="GetCustomerZoneRates.cs" />
     <Compile Include="LoadZoneRatesFromRate.cs" />
+    <Compile Include="PrepareRoutesForDBApply.cs" />
     <Compile Include="PrepareZoneInfosForDBApply.cs" />
     <Compile Include="PrepareCodeMatchesForDBApply.cs" />
     <Compile Include="SaveZoneRatesToDB.cs" />
@@ -118,6 +120,10 @@
     <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
       <Project>{60DA66BD-017D-43A2-82DC-ED7DB8751D23}</Project>
       <Name>TOne.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.LCR.Business\TOne.LCR.Business.csproj">
+      <Project>{5e726053-e223-49ce-9bf6-61271153a94d}</Project>
+      <Name>TOne.LCR.Business</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.LCR.Data\TOne.LCR.Data.csproj">
       <Project>{1c4e2326-4dd4-4bf4-8b8c-aa1c6fa0c4fc}</Project>
