refactored Traffic Statistics
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21416

--- a/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
@@ -71,6 +71,8 @@
     <Compile Include="TrafficStatistics\TrafficStatisticDaily.cs" />
     <Compile Include="TrafficStatistics\TrafficStatisticBatch.cs" />
     <Compile Include="TrafficStatistics\TrafficStatisticDailyBatch.cs" />
+    <Compile Include="TrafficStatistics\TrafficStatisticsByKey.cs" />
+    <Compile Include="TrafficStatistics\TrafficStatisticsDailyByKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
