--- a/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
