--- a/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data.SQL/TOne.LCR.Data.SQL.csproj
@@ -41,6 +41,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
@@ -51,6 +55,7 @@
   <ItemGroup>
     <Compile Include="CodePrefixGroupDataManager.cs" />
     <Compile Include="MasterDatabaseDataManager.cs" />
+    <Compile Include="RouteDetailDataManager.cs" />
     <Compile Include="RoutingDataManager.cs" />
     <Compile Include="CodeMatchDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
