--- a/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICodePrefixGroupDataManager.cs" />
+    <Compile Include="IRouteDetailDataManager.cs" />
     <Compile Include="IRoutingDatabaseDataManager.cs" />
     <Compile Include="IRoutingDataManager.cs" />
     <Compile Include="IZoneInfoDataManager.cs" />
