git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21451

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.110.240;initial catalog=CDRAnalysisMobile;user id=sa;password=iraq@cce$$1;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.110.240;initial catalog=CDRAnalysisMobile;persist security info=True;user id=sa;password=iraq@cce$$1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
