--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -184,6 +184,7 @@
     <add key="BusinessProcessServiceHost" value="localhost:1849"/>
     <add key="RouteBCPBatchSize" value="1000000"/>
     <add key="BCPBatchSize" value="1000000"/>
+    <add key="RoutingCodePrefixLength" value="2"/>
   </appSettings>
   <system.codedom>
     <compilers>
