--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.BProcess.Activities/TOne.BusinessEntity.BProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.BProcess.Activities/TOne.BusinessEntity.BProcess.Activities.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GetActiveSuppliersInfo.cs" />
+    <Compile Include="GetDistinctCodePrefixes.cs" />
     <Compile Include="LoadZonesInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
