--- a/TOneV2/Code/TOneV2/TOne.LCRProcess/TOne.LCRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess/TOne.LCRProcess.csproj
@@ -107,6 +107,10 @@
       <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
       <Name>TOne.BusinessEntity.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.Business\TOne.Business.csproj">
+      <Project>{cab55227-6fda-4012-8a59-168ad30f96d2}</Project>
+      <Name>TOne.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.Caching\TOne.Caching.csproj">
       <Project>{1950B29A-5C7B-47A3-8113-FC9211D27CFD}</Project>
       <Name>TOne.Caching</Name>
