--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -537,6 +537,22 @@
       <Project>{60da66bd-017d-43a2-82dc-ed7db8751d23}</Project>
       <Name>TOne.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.LCR.Business\TOne.LCR.Business.csproj">
+      <Project>{5e726053-e223-49ce-9bf6-61271153a94d}</Project>
+      <Name>TOne.LCR.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.LCR.Data.SQL\TOne.LCR.Data.SQL.csproj">
+      <Project>{acc3f0e9-3a0c-4b90-afe7-d9cdaa858c0b}</Project>
+      <Name>TOne.LCR.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.LCR.Data\TOne.LCR.Data.csproj">
+      <Project>{1c4e2326-4dd4-4bf4-8b8c-aa1c6fa0c4fc}</Project>
+      <Name>TOne.LCR.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.LCR.Entities\TOne.LCR.Entities.csproj">
+      <Project>{aee31608-d6e1-4005-9773-b1b970afd323}</Project>
+      <Name>TOne.LCR.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
