--- a/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IRouteDetailDataManager.cs" />
     <Compile Include="IRoutingDatabaseDataManager.cs" />
     <Compile Include="IRoutingDataManager.cs" />
+    <Compile Include="IRouteRulesDataManager.cs" />
     <Compile Include="IZoneInfoDataManager.cs" />
     <Compile Include="LCRDataManagerFactory.cs" />
     <Compile Include="ICodeMatchDataManager.cs" />
