--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -34,17 +34,17 @@
   </vanriseLogging>
   <connectionStrings>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.18.6;Database=TOneDemoNew;User ID=sa;Password=password"/>-->
-    <add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$"/>-->
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
-    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>-->
+    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <!--<add name="MainDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=NettalkFidaa;Data Source=."/>-->
     <add name="CDRTargetDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <add name="TransactionDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneTransactionDB;Data Source=."/>
     <add name="QueueItemDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneQueueDB;Data Source=."/>
     <add name="LogDBConnString" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFTracking;Data Source=."/>
-    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneSpactronNew_routing_{0};Data Source=."/>-->
-    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>
-    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneDevTest01_routing_{0};user id=development;password=dev!123"/>-->
+    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneDevTest01_routing_{0};Data Source=."/>-->
+    <!--<add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneSpactronNew_routing_{0};user id=development;password=dev!123"/>-->
+    <add name="RoutingDBConnStringTemplateKey" connectionString="Data Source=192.168.110.185;Initial Catalog=TOneDevTest01_routing_{0};user id=development;password=dev!123"/>
     <!--<add name="WFPersistence" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TOneWFPersistence;Data Source=."/>-->
   </connectionStrings>
 
@@ -53,8 +53,8 @@
     <session-factory>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
-      <property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>
-      <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123</property>-->
+      <!--<property name="connection.connection_string">Server=192.168.110.180\redundant;Database=TOneSpactronNEW;User ID=sa;Password=development@cce$$</property>-->
+      <property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123</property>
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TONE-ProtelMarch2012;User ID=sa;Password=vanrise@cce$$</property>-->
       <!--<property name="connection.connection_string">Server=192.168.110.185;Database=TOneDevTest01;User ID=sa;Password=vanrise@cce$$</property>-->
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
@@ -184,7 +184,7 @@
     <add key="BusinessProcessServiceHost" value="localhost:1849"/>
     <add key="RouteBCPBatchSize" value="1000000"/>
     <add key="BCPBatchSize" value="1000000"/>
-    <add key="RoutingCodePrefixLength" value="0"/>
+    <add key="RoutingCodePrefixLength" value="2"/>
   </appSettings>
   <system.codedom>
     <compilers>
