--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
@@ -6,7 +6,8 @@
   </configSections>
   <connectionStrings>
     <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=walid;password=walid123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=walid;password=walid123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
