Add dropdown view
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21621

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -451,6 +451,7 @@
     <Content Include="Client\Styles\Styles.css" />
     <Content Include="Client\Styles\ui-grid.css" />
     <Content Include="Client\Styles\ui-grid.svg" />
+    <Content Include="Client\Templates\Directives\vr-dropdown-multiple.html" />
     <Content Include="Client\Templates\Directives\vr-dropdown-standard.html" />
     <Content Include="Client\Templates\Directives\vr-gridview-standard.html" />
     <Content Include="Client\Templates\Directives\vr-textbox-button.html" />
